--- a/Map-Viewer/src/fxmlFiles/MapvViewer.fxml
+++ b/Map-Viewer/src/fxmlFiles/MapvViewer.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxmlFiles.UIMapviewerController">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxmlFiles.MapviewerController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
