--- a/Map-Viewer/src/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/src/fxmlFiles/UIMapviewer.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane styleClass="background" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxmlFiles.UIMapviewerController">
+<BorderPane styleClass="background" stylesheets="@../../bin/fxmlFiles/Style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxmlFiles.UIMapviewerController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -37,27 +37,35 @@
       </MenuBar>
    </top>
    <right>
-      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.3215339233038348" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" styleClass="background">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="259.0" prefWidth="158.0" styleClass="background">
                <children>
-                  <Label fx:id="cords" layoutX="3.0" layoutY="24.0" text="Test" />
-                  <Label fx:id="reminder" layoutY="135.0" text="Label" />
+                  <Label fx:id="reminder" layoutX="14.0" layoutY="136.0" styleClass="brightlabel" stylesheets="@../../bin/fxmlFiles/Style.css" text="Label">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="158.0" styleClass="background">
                <children>
-                  <Button layoutX="1.0" layoutY="155.0" mnemonicParsing="false" onAction="#PlaceBoat" prefHeight="23.0" prefWidth="155.0" text="Place Boat">
+                  <Button layoutX="1.0" layoutY="142.0" mnemonicParsing="false" onAction="#PlaceBoat" prefHeight="23.0" prefWidth="155.0" text="Place Boat">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button layoutX="1.0" layoutY="100.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0" text="Place Axe">
+                  <Button layoutX="1.0" layoutY="71.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0" text="Place Axe">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button layoutX="1.0" layoutY="48.0" mnemonicParsing="false" onAction="#LoadMap" prefHeight="23.0" prefWidth="155.0" styleClass="background" text="Load Map">
+                  <Label fx:id="cords" layoutX="14.0" layoutY="14.0" styleClass="brightlabel" text="Label" />
+                  <Button layoutX="1.0" layoutY="262.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0" text="Reset">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="1.0" layoutY="296.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0" text="Play">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
