--- a/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
@@ -51,24 +51,24 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="158.0" styleClass="background">
                <children>
-                  <Button layoutX="2.0" layoutY="179.0" mnemonicParsing="false" onAction="#PlaceBoat" prefHeight="23.0" prefWidth="155.0">
+                  <Button layoutX="2.0" layoutY="171.0" mnemonicParsing="false" onAction="#PlaceBoat" prefHeight="23.0" prefWidth="155.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                      <graphic>
-                        <ImageView fitHeight="95.0" fitWidth="136.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="120.0" fitWidth="146.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../Resources/Buttons/PlaceBoat.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="1.0" layoutY="71.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0">
+                  <Button layoutX="2.0" layoutY="56.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                      <graphic>
-                        <ImageView fitHeight="92.0" fitWidth="106.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="117.0" fitWidth="135.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../Resources/Buttons/PlaceAxe.png" />
                            </image>
@@ -76,15 +76,29 @@
                      </graphic>
                   </Button>
                   <Label fx:id="cords" layoutX="14.0" layoutY="14.0" styleClass="brightlabel" text="Label" />
-                  <Button layoutX="2.0" layoutY="289.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0" text="Reset">
+                  <Button layoutX="2.0" layoutY="299.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="65.0" fitWidth="132.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Resources/Buttons/Reset.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
-                  <Button layoutX="1.0" layoutY="323.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0" text="Play">
+                  <Button layoutX="4.0" layoutY="353.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="51.0" prefWidth="152.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="48.0" fitWidth="131.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Resources/Buttons/Play.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                </children>
             </AnchorPane>
