--- a/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
@@ -47,6 +47,11 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
+                  <ImageView fitHeight="80.0" fitWidth="159.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../Resources/Buttons/Diamondhunterlogo.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="158.0" styleClass="background">
