--- a/Map-Viewer/src/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/src/fxmlFiles/UIMapviewer.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" prefHeight="640.0" styleClass="background" stylesheets="@../../bin/fxmlFiles/Style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxmlFiles.UIMapviewerController">
+<BorderPane maxHeight="-Infinity" prefHeight="640.0" styleClass="background" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fxmlFiles.UIMapviewerController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -43,7 +43,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="259.0" prefWidth="158.0" styleClass="background">
                <children>
-                  <Label fx:id="reminder" layoutX="14.0" layoutY="136.0" styleClass="brightlabel" stylesheets="@../../bin/fxmlFiles/Style.css" text="Label">
+                  <Label fx:id="reminder" layoutX="14.0" layoutY="136.0" styleClass="brightlabel" text="Label">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
