--- a/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
@@ -41,9 +41,9 @@
    <right>
       <SplitPane dividerPositions="0.3215339233038348" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="259.0" prefWidth="158.0" styleClass="background">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="259.0" prefWidth="158.0" style="-fx-background-color: #000000;" styleClass="background">
                <children>
-                  <Label fx:id="reminder" layoutX="14.0" layoutY="136.0" styleClass="brightlabel" text="Label">
+                  <Label fx:id="reminder" layoutX="14.0" layoutY="136.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Label">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
@@ -54,7 +54,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="158.0" styleClass="background">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="158.0" style="-fx-background-color: #000000;" styleClass="background">
                <children>
                   <Button layoutX="2.0" layoutY="171.0" mnemonicParsing="false" onAction="#PlaceBoat" prefHeight="23.0" prefWidth="155.0">
                      <font>
@@ -80,7 +80,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Label fx:id="cords" layoutX="14.0" layoutY="14.0" styleClass="brightlabel" text="Label" />
+                  <Label fx:id="cords" layoutX="14.0" layoutY="14.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Label" />
                   <Button layoutX="2.0" layoutY="299.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
